--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
+        uses: quarto-dev/quarto-actions/setup@v1
         with:
-          version: latest
+          version: 1.4.549
+
+      - name: Verify Quarto installation
+        run: |
+          quarto --version
+          which quarto
 
       - name: Install dependencies
         run: |
